Fix column layout of lists on mobile.

--- a/courses/courses.css
+++ b/courses/courses.css
@@ -143,7 +143,7 @@ h5::before {
 }
 
 .skills li {
-	margin-top: 10px;
+	margin-botom: 10px;
 }
 
 .skills li::before {
